--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "cypress": "^14.0.1",
     "cypress-mongodb": "^6.2.1",
     "cypress-plugin-api": "^2.11.2",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "mongoose": "^8.10.0"
   }
 }
